<resources>
    <string name="app_name">Buyo</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_category">Category</string>
    <string name="navigation_wishlist">Wishlist</string>
    <string name="navigation_cart">Cart</string>
    <string name="navigation_profile">Profile</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string-array name="wishListNames">
        <item>Sport</item>
        <item>Winter</item>
        <item>Summer</item>
        <item>Accessories</item>
    </string-array>
    <string-array name="genders">
        <item></item>
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
        <item>No Info</item>
    </string-array>
    <string name="change_password">Change Password</string>
    <string name="account_info">Account Info</string>
    <string name="user_name">Name</string>
    <string name="user_email">Email</string>
    <string name="user_phone">Phone</string>
    <string name="user_update_password">Update Password</string>
    <string name="user_address">Addresses</string>
    <string name="logo">BUYO Logo</string>
    <string name="banner">Banner</string>
    <string name="search_hint">Search product</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_product_detail_container_price">Price</string>
    <string name="btn_product_detail_container_add_cart">Add to Cart</string>
    <string name="btn_product_detail_container_comments">Comments</string>
    <string name="iv_product_detail_content_image_desc">Image of the product</string>
    <string name="tv_product_detail_content_product_name">Product Name</string>
    <string name="tv_product_detail_content_vendor_name">Vendor Name</string>
    <string name="tv_product_detail_content_info">Lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Vivamus tempus sem tortor,
        id efficitur nisi feugiat eget. In ac odio sed nisl dapibus consequat.
        Praesent eu nulla at ipsum elementum varius et suscipit metus. Nunc dignissim laoreet semper.
        Phasellus tristique interdum elit eget luctus. Donec vel magna leo. Nullam semper eros tellus.
        Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Phasellus pharetra cursus nunc, ac eleifend metus. Cras elit purus,
        tincidunt accumsan dapibus at, malesuada a libero. Ut eu justo imperdiet, auctor nisi a, suscipit orci. Lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Vivamus tempus sem tortor,
        id efficitur nisi feugiat eget. In ac odio sed nisl dapibus consequat.
        Praesent eu nulla at ipsum elementum varius et suscipit metus. Nunc dignissim laoreet semper.
        Phasellus tristique interdum elit eget luctus. Donec vel magna leo. Nullam semper eros tellus.
        Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Phasellus pharetra cursus nunc, ac eleifend metus. Cras elit purus,
        tincidunt accumsan dapibus at, malesuada a libero. Ut eu justo imperdiet, auctor nisi a, suscipit orci. Lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Vivamus tempus sem tortor,
        id efficitur nisi feugiat eget. In ac odio sed nisl dapibus consequat.
        Praesent eu nulla at ipsum elementum varius et suscipit metus. Nunc dignissim laoreet semper.
        Phasellus tristique interdum elit eget luctus. Donec vel magna leo. Nullam semper eros tellus.
        Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Phasellus pharetra cursus nunc, ac eleifend metus. Cras elit purus,
        tincidunt accumsan dapibus at, malesuada a libero. Ut eu justo imperdiet, auctor nisi a, suscipit orci. Lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Vivamus tempus sem tortor,
        id efficitur nisi feugiat eget. In ac odio sed nisl dapibus consequat.
        Praesent eu nulla at ipsum elementum varius et suscipit metus. Nunc dignissim laoreet semper.
        Phasellus tristique interdum elit eget luctus. Donec vel magna leo. Nullam semper eros tellus.
        Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Phasellus pharetra cursus nunc, ac eleifend metus. Cras elit purus,
        tincidunt accumsan dapibus at, malesuada a libero. Ut eu justo imperdiet, auctor nisi a, suscipit orci. </string>
    <string name="dummyCustomerName">Mr. D**** C*******</string>
    <string name="dummyComment">Lorem ipsum dolor sit amet,consectetur adipiscing elit. Vivamus tempus sem tortor, id efficitur nisi feugiat eget. In ac odio sed nisl dapibus consequat.Praesent eu nulla at ipsum elementum varius et suscipit metus.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_sing_up">Sign Up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="remember_me">Remember me</string>
    <string name="non_login">You need to login first</string>
    <string name="google_login">Login with Gmail</string>
    <string name="google_signup">Sign up with Gmail</string>
    <string name="reset_password">Forgot Password</string>
    <string name="sign_up_switch">Switch for sign-up</string>
    <string name="login_switch">Switch for login</string>
    <string name="user_type_switch">Switch if you are a vendor</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="kvkk_accept">I accept privacy policy and terms of service</string>
    <string name="i_am_a_vendor">I am a vendor</string>
    <string name="i_am_a_customer">I am a customer</string>
    <string name="reprompt_password">Password Again</string>
    <string name="tr_tax_id">TR Tax ID</string>
    <string name="choose_location">Choose Company Location</string>
    <string name="select_string">Select</string>
    <string name="reselect_location">Re-select Location</string>
    <string name="company_e_mail">Company E-Mail</string>
    <string name="company_website">Company Website</string>
    <string name="name_surname">Name Surname</string>
    <string name="privacy_policy_terms_of_service">Privacy Policy - Terms of Service</string>
    <string-array name="sp_productList_order">
        <item>Best-Selling</item>
        <item>Date (Latest)</item>
        <item>Price (Highest)</item>
        <item>Comments (Highest)</item>
        <item>Rating</item>
        <item>Name</item>
    </string-array>
    <string-array name="sp_productList_filter">
        <item>Brand</item>
        <item>Category</item>
        <item>Vendor</item>
        <item>Price Range</item>
        <item>Category Specific</item>
    </string-array>
    <string-array name="sp_dummy_values">
        <item>Value1</item>
        <item>Value2</item>
        <item>Value3</item>
        <item>Value4</item>
        <item>Value5</item>
    </string-array>
    <string-array name="sp_sort_type">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string name="empty_cart"> You do not have any product in your cart</string>
    <string name="gotoshop"> Let\'s shop</string>
    <string name="checkout"> Checkout</string>
    <string-array name="sp_dummy_address">
        <item>You need to add an address</item>
    </string-array>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_province">Province</string>
    <string name="prompt_city">City</string>
    <string name="prompt_street">Street</string>
    <string name="prompt_addressTitle">Address Title</string>
    <string name="prompt_address">Address</string>
    <string name="back">Back</string>
    <string name="notifications">Notifications</string>
</resources>