<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vendor_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/buyo_antiqueWhite">

    <EditText
        android:id="@+id/vendor_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/vendor_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vendor_username" />

    <EditText
        android:id="@+id/vendor_reenter_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:hint="@string/reprompt_password"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:selectAllOnFocus="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vendor_password" />


    <CheckBox
        android:id="@+id/vendor_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vendor_reenter_password" />

    <Button
        android:id="@+id/vendor_login_signup_button"
        android:enabled="false"
        android:alpha="0.6"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="48dp"
        android:background="@color/medium_orange"
        android:text="@string/action_login"
        android:textColor="@color/buyo_white"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vendor_remember_me" />

    <Button
        android:id="@+id/vendor_reset_password"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginTop="@dimen/medium_margin"
        android:background="@color/grey"
        android:text="@string/reset_password"
        android:textColor="@color/buyo_white"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vendor_login_signup_button" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/vendor_signup_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/sign_up_switch"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vendor_reset_password" />

    <Button
        android:id="@+id/vendor_switch_to_customer"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:text="@string/i_am_a_customer"
        android:background="@color/grey"
        android:textColor="@color/buyo_white"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/vendor_buyo_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/vendor_buyo_logo"
        android:layout_width="177dp"
        android:layout_height="102dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>
