<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.notification.NotificationFragment"
android:background="@color/buyo_white">

<Button
    android:id="@+id/notification_back_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@color/buyo_darkCandyAppleRed"
    android:text="@string/back"
    android:textColor="@color/buyo_white"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<ImageView
    android:id="@+id/logoImageView"
    android:layout_width="0dp"
    android:layout_height="49dp"
    android:contentDescription="@string/logo"
    android:src="@mipmap/logo"
    android:layout_margin="16dp"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />


<com.google.android.material.textview.MaterialTextView
    android:id="@+id/notification_header"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/notifications"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:textSize="20sp"
    android:layout_margin="@dimen/medium_margin"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/logoImageView">
</com.google.android.material.textview.MaterialTextView>

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rv_notifications"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_margin="@dimen/medium_margin"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/notification_header"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:listitem="@layout/item_notification" />


</androidx.constraintlayout.widget.ConstraintLayout>